# pyMARIGOLD

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml  setup.py
marigold/: __init__.py  marigold.py
marigold/src/: dataset.cpp  kmeans_runner.cpp  runner.cpp
marigold/src/interfaces/: interface_kmeans.hpp
marigold/src/kmeans_utils/: utils.cpp
marigold/src/strategies/: marigold_kmeans_strategy.cpp
src/: data_reader.rs  kmeans.rs  kmeans_utils.rs  lib.rs  lloyd.rs  marigold.rs
src/kmeans_utils/: tests.rs
src/marigold/: tests.rs
