[package]
name = "pyMARIGOLD"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyMARIGOLD"
crate-type = ["cdylib"]

[dependencies]
num = "0.4.0"
cpython = "0.7.1"
simd_euclidean = {git = "https://github.com/lazear/simd-euclidean.git" }